--- a/style.css
+++ b/style.css
@@ -213,6 +213,49 @@ nav .fa{
     justify-content: space-between;
 }
 
+
+/*
+
+.column {
+    float: left;
+    width: 30%;
+    padding: 0 8px;
+  }
+  
+  
+  .row {margin: 0 -5px;}
+  
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+  }
+  
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    text-align: center;
+    background-color: #f1f1f1;
+    border-radius: 10px;
+}
+.card img{
+    width: 100%;
+    height: 100%;
+}
+*/
+
+
+
 .sport-col{
     flex-basis: 32%;
     border-radius: 10px;
